--- a/app/templates/Home.html
+++ b/app/templates/Home.html
@@ -1,25 +1,5 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "styles.css" %}">
-</head>
-
-<body>
-    <div class="bibi">
-    <center><nav style="color: tomato; font-size: 100px;background-color:black;width:100%; ">
-        Hello {{ name }}!
-
-
-    </nav></center>
-    <center><h2 style="color: tomato; font-size: 50px; ">
-        <a href="/">BaseCamp's Team Roster</a>
-
-    </center> </h2>
-
+{% extends "parent.html" %}
+{%block content%}
 
     <div>
         {% for team in teams%} 
@@ -28,7 +8,4 @@
 
         {% endfor %}
         </center><div>
-    <main>{% block content %}{% endblock content %}</main>
-</div>
-</body>
-</html>
+{% endblock content %}
